# xadrez

./: .gitignore  CMakeLists.txt  Makefile  xadrez.sh
pgn/: puzzle1.pgn
python/: moves.py  test.py
src/: chessboard.cpp  chessboard.h  engine.cpp  engine.h  log.h  main.cpp  movement.cpp  movement.h  perf.cpp  position.cpp  position.h  tree.cpp  tree.h  uci.cpp  uci.h  variation.cpp  variation.h
src/app/: main.cpp  uci.cpp
src/util/: ettune.h
test/: CMakeLists.txt  Makefile  debug_script.txt  enpassant  run_tests.sh  testChessboard.cpp  testEngine.cpp  testMovement.cpp  testPerformance.cpp  testPosition.cpp  testettune.cpp
